# eventhub

./: README.md
event-platform-backend/: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  dump_payload.py  e2e_output.txt  e2e_output_final.txt  e2e_output_final2.txt  e2e_output_fixed.txt  e2e_plan_test.txt  full_proof.py  locustfile.py  main.py  nginx.conf  prove_backend.py  pyproject.toml  requirements.txt  verify_script.py
event-platform-backend/app/: __init__.py
event-platform-backend/app/api/v1/: router.py
event-platform-backend/app/core/: celery_app.py  config.py  dependencies.py  logging.py  mail.py  middleware.py  rate_limiter.py  redis_client.py  security.py
event-platform-backend/app/db/: base.py  init_db.py  models.py  session.py
event-platform-backend/app/modules/: tasks.py
event-platform-backend/app/modules/admin/: repository.py  router.py  schema.py  service.py
event-platform-backend/app/modules/auth/: email_service.py  models.py  repository.py  router.py  schema.py  service.py
event-platform-backend/app/modules/bookings/: models.py  repository.py  router.py  schemas.py  service.py
event-platform-backend/app/modules/chat/: models.py  repository.py  (+4 more)
event-platform-backend/app/shared/: exceptions.py
event-platform-backend/scripts/: add_currency_column.py  add_user_tokens.py  check_bookings.py  e2e_flow_simulator.py  e2e_flow_simulator_container.py  generate_fake_data.py  migrate_notifications.py  seed_listing_fields.py  test_audit_refund.py  test_payment.py  test_vendor_history.py  update_enum.py
(+122 files in other folders)
