[project]
name = "event-platform-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.4.0",
    "faker>=40.8.0",
    "fastapi-mail>=1.6.2",
    "fastapi[all]>=0.129.0",
    "gunicorn>=23.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "razorpay>=2.0.1",
    "redis>=5.2.1",
    "requests",
    "locust",
    "sqlalchemy>=2.0.46",
]
